Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28281

Hashicorp: Key ID is not indicated in the log record about not found key

    XMLWordPrintable

Details

    Description

      When the server is trying to use an encryption key ID unknown to hashicorp, a note is written to the log:

      preview-10.9-MDEV-20119-misc e62a2a061

      2022-04-11  1:15:08 9 [Note] mysqld: hashicorp: Key not found
      

      Since the missing ID is not a secret (it is even written in the SQL errors in the client), it would make all sense to add it to the log record as well, otherwise it is useless.

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.