MDEV-28281: Hashicorp: Key ID is not indicated in the log record

This commit adds an indication of the ID of the not found key
(and, when appropriate, also an indication of the version number
of the key) in the log file, making it easier to find errors.